tests/derive-tests/into_variant/fail/enum/tuple_variants/many_fields.err.txt
error: proc-macro derive panicked
 --> /tests/derive-tests/into_variant/fail/enum/tuple_variants/many_fields.rs:5:10
  |
5 | #[derive(IntoVariant)]
  |          ^^^^^^^^^^^
  |
  = help: message: called `Result::unwrap()` on an `Err` value: Error("Only enums with single-element tuple variants can use this derive")
